Manually truncate hash to 25 characters. Add block detail page css fixes

--- a/src/assets/styles/components/Block.less
+++ b/src/assets/styles/components/Block.less
@@ -17,6 +17,11 @@
       height: 80px;
       border-radius: 50%;
       background: @bg-grey-color;
+      margin-right: 30px;
+
+      @media all and (max-width: 550px) {
+        display: none;
+      }
 
       i {
         font-size: 25px;
@@ -30,6 +35,10 @@
 
     .summary {
       padding: 20px 0px;
+
+      @media all and (max-width: 550px) {
+        padding-left: 15px;
+      }
 
       .height {
         font-size: 20px;
@@ -102,9 +111,11 @@
     &--table {
       border-radius: 5px;
       border: 1px solid @border-main-color;
+      overflow-x: auto;
 
       table {
         width: 100%;
+        min-width: 800px;
 
         tr {
           border-bottom: 1px solid @border-main-color;
@@ -125,6 +136,12 @@
 
             .label {
               font-size: 14px;
+            }
+
+            .hash {
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              overflow: hidden;
             }
 
             a {
